@@ -54,6 +54,14 @@ SU3BIN = /usr/5bin/posix2001
 UCBBIN = /usr/ucb
 
 #
+# Location for development binaries. The "tsort" utility is
+# installed in this directory, and the utilities from the
+# "Heirloom Development Tools" package are expected to be
+# installed in it.
+#
+CCSBIN = /usr/ccs/bin
+
+#
 # Location for library files.
 #
 DEFLIB = /usr/5lib
